--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Luke Cohen # your name (or website title) here
-logo: "/images/Cohen_Luke_2017_18.jpg?raw=true" # your photo (or logo) here
+logo: "/images/Cohen_Luke_2017_18.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
