--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/luke-cohen-071018154/">View My LinkedIn Profile</a> 
+  <a href="https://gitlab.eecs.umich.edu/lukecohe/">View My GitLab Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
