--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: Luke Cohen # your name (or website title) here
 logo: "/images/Cohen_Luke_2017_18.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  I am a recent graduate from the University of Michigan, Ann Arbor where I graduated with a BSE in Computer Engineering. My classload consisted of 
+  a plethora of both Electrical Engineering and Computer Science classes where I was able to learn about a bredth of topics ranging from embedded system 
+  development all the way to an introduction to image processing. 
   <br><br>
   Second description 
   <br><br>
