--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,14 @@
 title: Luke Cohen # your name (or website title) here
 logo: "/images/Cohen_Luke_2017_18.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I am a recent graduate from the University of Michigan, Ann Arbor where I graduated with a BSE in Computer Engineering. My classload consisted of 
-  a plethora of both Electrical Engineering and Computer Science classes where I was able to learn about a bredth of topics ranging from embedded system 
-  development all the way to an introduction to image processing. 
+  I am a recent graduate from the University of Michigan, Ann Arbor where I 
+  graduated with a BSE in Computer Engineering. My classload consisted of 
+  a plethora of both Electrical Engineering and Computer Science classes 
+  where I was able to learn about a bredth of topics ranging from embedded 
+  system development all the way to an introduction to image processing. 
+  I will be returning to University of Michigan, Ann Arbor to persue a MSE 
+  in Computer Engineering with a focus in Embedded Systems in the Fall of 
+  2021.
   <br><br>
   Second description 
   <br><br>
